--- a/labMedical/src/app/app.component.html
+++ b/labMedical/src/app/app.component.html
@@ -1,4 +1,1 @@
--- Test
-<br>
-<button type="button" class="btn btn-primary">Primary</button>
-<button type="button" class="btn btn-secondary">Secondary</button>
+<labM-login></labM-login>
