--- a/labMedical/src/app/components/login-form/login-form.component.html
+++ b/labMedical/src/app/components/login-form/login-form.component.html
@@ -1,7 +1,7 @@
 <div class="container row col-4">
     <div class="d-flex justify-content-between">
         <h1>Login</h1>
-        <button type="button" class="btn btn-outline-info btn-sm">Criar Conta</button>
+        <button type="button" class="btn btn-outline-info btn-sm" data-bs-toggle="modal" data-bs-target="#loginCadastro">Criar Conta</button>
     </div>
     <form class="row">
         <div class="mb-3">
@@ -17,3 +17,4 @@
         <a class="text-center" (click)="placeHolderResetSenha()" href="">Esqueceu sua senha?</a>
     </form>
 </div>
+<labM-login-cadastro></labM-login-cadastro>
