--- a/labMedical/src/app/components/login-cadastro/login-cadastro.component.html
+++ b/labMedical/src/app/components/login-cadastro/login-cadastro.component.html
@@ -1,56 +1,43 @@
-<div class="modal fade" id="loginCadastro" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-    aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="staticBackdropLabel">Cadastrar Usuário</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+<form #cadastroUsuario="ngForm" (ngSubmit)="onSubmit(cadastroUsuario)">
+    <div class="card-body">
+        <div class="mb-3 form-group">
+            <label for="nome" class="form-label">Nome</label>
+            <input #inputNome="ngModel" type="text" class="form-control" name="nome" [(ngModel)]="nome" required
+                placeholder="Digite seu nome">
+            <div *ngIf="!inputNome.valid&&inputNome.touched" class="alert alert-danger">Campo Obrigatório
             </div>
-            <form #cadastroUsuario="ngForm" (ngSubmit)="onSubmit(cadastroUsuario)">
-                <div class="modal-body">
-                    <div class="mb-3 form-group">
-                        <label for="nome" class="form-label">Nome</label>
-                        <input #inputNome="ngModel" type="text" class="form-control" name="nome" [(ngModel)]="nome"
-                            required placeholder="Digite seu nome">
-                        <div *ngIf="!inputNome.valid&&inputNome.touched" class="alert alert-danger">Campo Obrigatório
-                        </div>
-                    </div>
-                    <div class="mb-3 form-group">
-                        <label for="emailCadastro" class="form-label">E-mail</label>
-                        <input #inputEmail="ngModel" type="email" class="form-control" name="emailCadastro"
-                            [(ngModel)]="email" required pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$"
-                            placeholder="example@example.com">
-                        <div *ngIf="inputEmail.errors?.['required']&&inputEmail.touched" class="alert alert-danger">
-                            Campo Obrigatório</div>
-                        <div *ngIf="inputEmail.errors?.['pattern']&&inputEmail.touched" class="alert alert-danger">
-                            Insira email válido</div>
-                    </div>
-                    <div class="mb-3 form-group">
-                        <label for="senhaCadastro" class="form-label">Senha</label>
-                        <input #inputSenha="ngModel" type="password" class="form-control" name="senhaCadastro"
-                            [(ngModel)]="senha" required labMMatchingPassword value=""
-                            [senha]="inputConfirmarSenha.value" minlength="8" placeholder="Mínimo de 8 caracteres">
-                        <div *ngIf="inputSenha.errors?.['required']&&inputSenha.touched" class="alert alert-danger">
-                            Campo Obrigatório</div>
-                        <div *ngIf="inputSenha.errors?.['minlength']&&inputSenha.touched" class="alert alert-danger">
-                            Mínimo de 8 caracteres</div>
-                    </div>
-                    <div class="mb-3 form-group">
-                        <label for="senhaValida" class="form-label">Confirmar Senha</label>
-                        <input #inputConfirmarSenha="ngModel" type="password" class="form-control" name="senhaValida"
-                            [(ngModel)]="confirmarSenha" required labMMatchingPassword value=""
-                            [senha]="inputSenha.value">
-                        <div *ngIf="inputConfirmarSenha.errors?.['required']&&inputConfirmarSenha.touched"
-                            class="alert alert-danger">Campo
-                            Obrigatório</div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary" [disabled]="!cadastroUsuario.valid">Confirmar</button>
-                    <button type="reset" class="btn btn-primary">Limpar</button>
-                </div>
-            </form>
-
+        </div>
+        <div class="mb-3 form-group">
+            <label for="emailCadastro" class="form-label">E-mail</label>
+            <input #inputEmail="ngModel" type="email" class="form-control" name="emailCadastro" [(ngModel)]="email"
+                required pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$" placeholder="exemplo@exemplo.com">
+            <div *ngIf="inputEmail.errors?.['required']&&inputEmail.touched" class="alert alert-danger">
+                Campo Obrigatório</div>
+            <div *ngIf="inputEmail.errors?.['pattern']&&inputEmail.touched" class="alert alert-danger">
+                Insira email válido</div>
+        </div>
+        <div class="mb-3 form-group">
+            <label for="senhaCadastro" class="form-label">Senha</label>
+            <input #inputSenha="ngModel" type="password" class="form-control" name="senhaCadastro" [(ngModel)]="senha"
+                required labMMatchingPassword value="" [senha]="inputConfirmarSenha.value" minlength="8"
+                placeholder="Mínimo de 8 caracteres">
+            <div *ngIf="inputSenha.errors?.['required']&&inputSenha.touched" class="alert alert-danger">
+                Campo Obrigatório</div>
+            <div *ngIf="inputSenha.errors?.['minlength']&&inputSenha.touched" class="alert alert-danger">
+                Mínimo de 8 caracteres</div>
+        </div>
+        <div class="mb-3 form-group">
+            <label for="senhaValida" class="form-label">Confirmar Senha</label>
+            <input #inputConfirmarSenha="ngModel" type="password" class="form-control" name="senhaValida" placeholder="Insira a senha novamente"
+                [(ngModel)]="confirmarSenha" required labMMatchingPassword value="" [senha]="inputSenha.value">
+            <div *ngIf="inputConfirmarSenha.errors?.['required']&&inputConfirmarSenha.touched"
+                class="alert alert-danger">Campo
+                Obrigatório</div>
+            <div *ngIf="inputConfirmarSenha.errors?.['matchingPassword']&&!inputConfirmarSenha.errors?.['required']" class="alert alert-danger">Senhas não conferem</div>
         </div>
     </div>
-</div>
+    <div class="d-flex justify-content-between">
+        <button type="submit" class="btn btn-primary" [disabled]="!cadastroUsuario.valid">Confirmar</button>
+        <button type="reset" class="btn btn-primary">Limpar</button>
+    </div>
+</form>
