--- a/labMedical/src/app/components/login-form/login-form.component.html
+++ b/labMedical/src/app/components/login-form/login-form.component.html
@@ -1,20 +1,15 @@
-<div class="container row col-4">
-    <div class="d-flex justify-content-between">
-        <h1>Login</h1>
-        <button type="button" class="btn btn-outline-info btn-sm" data-bs-toggle="modal" data-bs-target="#loginCadastro">Criar Conta</button>
+<form class="card-body">
+    <div class="mb-3">
+        <label for="loginEmail" class="form-label">E-mail</label>
+        <input type="email" class="form-control" name="loginEmail" [(ngModel)]="email">
     </div>
-    <form class="row">
-        <div class="mb-3">
-            <label for="loginEmail" class="form-label">E-mail</label>
-            <input type="email" class="form-control" name="loginEmail" [(ngModel)]="email">
-        </div>
-        <div class="mb-3">
-            <label for="loginSenha" class="form-label">Senha</label>
-            <input type="password" class="form-control" name="loginSenha" [(ngModel)]="senha">
-        </div>
-        <div name="loginAlerts"></div>
-        <button type="submit" class="btn btn-primary">Entrar</button>
+    <div class="mb-3">
+        <label for="loginSenha" class="form-label">Senha</label>
+        <input type="password" class="form-control" name="loginSenha" [(ngModel)]="senha">
+    </div>
+    <div name="loginAlerts"></div>
+    <div class="row">
+        <button type="submit" class="btn btn-primary mb-3">Entrar</button>
         <a class="text-center" (click)="placeHolderResetSenha()" href="">Esqueceu sua senha?</a>
-    </form>
-</div>
-<labM-login-cadastro></labM-login-cadastro>
+    </div>
+</form>
