--- a/labMedical/src/app/pages/login/login.component.html
+++ b/labMedical/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-center">
+<div id="body" class="d-flex justify-content-center align-items-center">
     <div class="card">
         <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs d-flex justify-content-between">
@@ -13,8 +13,8 @@
             </ul>
         </div>
         <div class="card-body">
-                <labM-login-form *ngIf="status=='login'"></labM-login-form>
-                <labM-login-cadastro *ngIf="status=='registro'"></labM-login-cadastro>
+            <labM-login-form *ngIf="status=='login'"></labM-login-form>
+            <labM-login-cadastro *ngIf="status=='registro'"></labM-login-cadastro>
         </div>
     </div>
 </div>
