--- a/labMedical/src/app/components/login-cadastro/login-cadastro.component.html
+++ b/labMedical/src/app/components/login-cadastro/login-cadastro.component.html
@@ -37,7 +37,7 @@
         </div>
     </div>
     <div class="d-flex justify-content-between">
-        <button type="submit" class="btn btn-primary" [disabled]="!cadastroUsuario.valid">Confirmar</button>
+        <button type="submit" class="btn btn-primary" [disabled]="cadastroUsuario.valid">Confirmar</button>
         <button type="reset" class="btn btn-primary">Limpar</button>
     </div>
 </form>
