--- a/labMedical/src/app/components/login-cadastro/login-cadastro.component.html
+++ b/labMedical/src/app/components/login-cadastro/login-cadastro.component.html
@@ -10,11 +10,13 @@
         <div class="mb-3 form-group">
             <label for="emailCadastro" class="form-label">E-mail</label>
             <input #inputEmail="ngModel" type="email" class="form-control" name="emailCadastro" [(ngModel)]="email"
-                required pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$" placeholder="exemplo@exemplo.com">
+                required email labMAvailableEmail placeholder="exemplo@exemplo.com">
             <div *ngIf="inputEmail.errors?.['required']&&inputEmail.touched" class="alert alert-danger">
                 Campo Obrigatório</div>
-            <div *ngIf="inputEmail.errors?.['pattern']&&inputEmail.touched" class="alert alert-danger">
+            <div *ngIf="inputEmail.errors?.['email']&&inputEmail.touched" class="alert alert-danger">
                 Insira email válido</div>
+            <div *ngIf="inputEmail.errors?.['availableEmail']&&inputEmail.touched" class="alert alert-danger">
+                Email Indisponível</div>
         </div>
         <div class="mb-3 form-group">
             <label for="senhaCadastro" class="form-label">Senha</label>
@@ -28,16 +30,18 @@
         </div>
         <div class="mb-3 form-group">
             <label for="senhaValida" class="form-label">Confirmar Senha</label>
-            <input #inputConfirmarSenha="ngModel" type="password" class="form-control" name="senhaValida" placeholder="Insira a senha novamente"
-                [(ngModel)]="confirmarSenha" required labMMatchingPassword value="" [senha]="inputSenha.value">
+            <input #inputConfirmarSenha="ngModel" type="password" class="form-control" name="senhaValida"
+                placeholder="Insira a senha novamente" [(ngModel)]="confirmarSenha" required labMMatchingPassword
+                value="" [senha]="inputSenha.value">
             <div *ngIf="inputConfirmarSenha.errors?.['required']&&inputConfirmarSenha.touched"
                 class="alert alert-danger">Campo
                 Obrigatório</div>
-            <div *ngIf="inputConfirmarSenha.errors?.['matchingPassword']&&!inputConfirmarSenha.errors?.['required']" class="alert alert-danger">Senhas não conferem</div>
+            <div *ngIf="inputConfirmarSenha.errors?.['matchingPassword']&&!inputConfirmarSenha.errors?.['required']"
+                class="alert alert-danger">Senhas não conferem</div>
         </div>
     </div>
     <div class="d-flex justify-content-between">
-        <button type="submit" class="btn btn-primary" [disabled]="cadastroUsuario.valid">Confirmar</button>
+        <button type="submit" class="btn btn-primary" [disabled]="!cadastroUsuario.valid">Confirmar</button>
         <button type="reset" class="btn btn-primary">Limpar</button>
     </div>
 </form>
