--- a/labMedical/src/app/pages/main/main.component.html
+++ b/labMedical/src/app/pages/main/main.component.html
@@ -1,4 +1,4 @@
-<!-- <toolbar></toolbar> -->
+<labM-toolbar></labM-toolbar>
 <!-- <router-outlet></router-outlet> -->
-<labM-inicio></labM-inicio>
-<!-- <navbar></navbar> -->
+<!-- <labM-inicio></labM-inicio> -->
+<!-- <labM-side-menu></labM-side-menu> -->
