--- a/labMedical/src/app/pages/inicio/inicio.component.html
+++ b/labMedical/src/app/pages/inicio/inicio.component.html
@@ -11,11 +11,24 @@
 <!-- busca de pacientes -->
 <div>
     <input type="text">
-    <button> Buscar</button>
+    <button> Buscar </button>
 </div>
 <!-- lista de pacientes -->
 <ul>
     <li>
-
+        <p>
+            <button class="btn btn-primary" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
+                Toggle width collapse
+            </button>
+        </p>
+        <div style="min-height: 120px;">
+            <div class="collapse collapse-horizontal" id="collapseWidthExample">
+                <div class="card card-body" style="width: 300px;">
+                    This is some placeholder content for a horizontal collapse. It's hidden by default and shown when
+                    triggered.
+                </div>
+            </div>
+        </div>
     </li>
 </ul>
