--- a/labMedical/src/app/components/side-menu/side-menu.component.html
+++ b/labMedical/src/app/components/side-menu/side-menu.component.html
@@ -1,1 +1,20 @@
-<p>side-menu works!</p>
+<div class="collapse collapse-horizontal" id="collapseWidthExample">
+    <div class="d-flex flex-column bg-dark text-center text-white p-4" style="width: 15rem;">
+        <!-- <div class="d-flex container flex-column text-white"> -->
+        <p>
+            Geral
+        </p>
+        <!-- <div class="d-flex flex-column"> -->
+            <button class="btn btn-outline-primary mb-3 active">Home</button>
+            <button class="btn btn-outline-primary mb-3">Botao</button>
+        <!-- </div> -->
+        <!-- <div class="text-white text-center mb-5"> -->
+        <p>
+            Seção
+        </p>
+        <button class="btn btn-outline-primary mb-3">Botao</button>
+        <button class="btn btn-outline-primary mb-3">Botao</button>
+        <!-- </div> -->
+        <!-- </div> -->
+    </div>
+</div>
