--- a/labMedical/src/app/components/toolbar/toolbar.component.html
+++ b/labMedical/src/app/components/toolbar/toolbar.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
-        <button class="navbar-toggler-icon btn" type="button" data-bs-toggle="collapse"
-            data-bs-target="#menuLateral">
+        <button class="btn navbar-toggler-icon" type="button" data-bs-toggle="collapse"
+            data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
+
         </button>
         <p class="navbar-brand" href="#">
             Nome da Página
@@ -10,16 +11,7 @@
             <p>
                 Usuario
             </p>
-            <img src="logo">
+            <img src="">
         </div>
     </div>
-
 </nav>
-<div class="bg-dark text-white d-flex" style="max-width: 15rem">
-    <div class="collapse collapse-horizontal" style="height: 100rem" id="menuLateral">
-        <div class="row">
-            <button>Texto</button>
-            <button>Texto</button>
-        </div>
-    </div>
-</div>
