--- a/labMedical/src/app/pages/main/main.component.html
+++ b/labMedical/src/app/pages/main/main.component.html
@@ -1,4 +1,8 @@
-<labM-toolbar></labM-toolbar>
-<!-- <router-outlet></router-outlet> -->
-<!-- <labM-inicio></labM-inicio> -->
-<!-- <labM-side-menu></labM-side-menu> -->
+<body>
+    <labM-toolbar></labM-toolbar>
+    <!-- <router-outlet></router-outlet> -->
+    <div class="d-flex">
+        <labM-side-menu></labM-side-menu>
+        <labM-inicio style="width:100%"></labM-inicio>
+    </div>
+</body>
