--- a/labMedical/src/app/components/side-menu/side-menu.component.html
+++ b/labMedical/src/app/components/side-menu/side-menu.component.html
@@ -1,5 +1,5 @@
-<div class="collapse collapse-horizontal" id="collapseWidthExample">
-    <div class="d-flex flex-column bg-dark text-center text-white p-4" style="width: 15rem;">
+<div class="collapse collapse-horizontal h-100" id="collapseWidthExample">
+    <div class="d-flex flex-column bg-dark text-center text-white p-4" style="height:100%;width: 15rem;">
         <!-- <div class="d-flex container flex-column text-white"> -->
         <p>
             Geral
