--- a/labMedical/src/app/pages/main/main.component.html
+++ b/labMedical/src/app/pages/main/main.component.html
@@ -2,7 +2,8 @@
     <labM-toolbar></labM-toolbar>
     <!-- <router-outlet></router-outlet> -->
     <div class="d-flex">
-        <labM-side-menu></labM-side-menu>
-        <labM-inicio style="width:100%"></labM-inicio>
+        <labM-side-menu style="height:100vh"></labM-side-menu>
+        <!-- <labM-inicio style="width:100%"></labM-inicio> -->
+        <labM-paciente-cadastro style="width:100%"></labM-paciente-cadastro>
     </div>
 </body>
