--- a/labMedical/src/app/pages/exame-cadastro/exame-cadastro.component.html
+++ b/labMedical/src/app/pages/exame-cadastro/exame-cadastro.component.html
@@ -62,7 +62,7 @@
                 <div *ngIf="inputResultado.errors?.['required']&&inputResultado.touched" class="alert alert-danger">
                     Campo Obrigatório</div>
                 <div *ngIf="inputResultado.errors?.['minlength']&&inputResultado.touched" class="alert alert-danger">
-                    Mínimo de 16 letras</div>
+                    Mínimo de 16 caracteres</div>
             </div>
         </div>
         <div class="d-flex justify-content-between">
