--- a/labMedical/src/app/pages/paciente-cadastro/paciente-cadastro.component.html
+++ b/labMedical/src/app/pages/paciente-cadastro/paciente-cadastro.component.html
@@ -6,7 +6,7 @@
             <div class="d-flex flex-column flex-grow-1">
                 <label for="nome" class="form-label">Nome</label>
                 <input #inputNome="ngModel" type="text" class="form-control" name="nome" [(ngModel)]="nome" required
-                    maxlength="64" minlength="8" placeholder="Digite seu nome">
+                    maxlength="64" minlength="8" placeholder="Informe seu nome completo">
                 <div *ngIf="inputNome.errors?.['required']&&inputNome.touched" class="alert alert-danger">
                     Campo Obrigatório</div>
                 <div *ngIf="inputNome.errors?.['minlength']&&inputNome.touched" class="alert alert-danger">
@@ -94,7 +94,7 @@
             <div class="d-flex flex-column flex-grow-1">
                 <label for="naturalidade" class="form-label">Naturalidade</label>
                 <input #inputNaturalidade="ngModel" type="text" class="form-control" name="naturalidade"
-                    [(ngModel)]="naturalidade" required maxlength="64" minlength="8" placeholder="País de Nascimento">
+                    [(ngModel)]="naturalidade" required maxlength="64" minlength="8" placeholder="Brasileiro">
                 <div *ngIf="inputNaturalidade.errors?.['required']&&inputNaturalidade.touched"
                     class="alert alert-danger">
                     Campo Obrigatório</div>
@@ -152,7 +152,7 @@
         <h5>Endereço</h5>
         <div class="mb-3 form-group d-flex gap-3">
             <!-- buscar JSON do viaCEP e montar campos por ngFor -->
-            
+
             <!-- <div class="d-flex flex-column flex-grow-1">
                 <label for="" class="form-label"></label>
                 <input #input="ngModel" type="text" class="form-control" name="" [(ngModel)]="" required
