--- a/labMedical/src/app/pages/exame-cadastro/exame-cadastro.component.html
+++ b/labMedical/src/app/pages/exame-cadastro/exame-cadastro.component.html
@@ -2,12 +2,12 @@
     <div class="d-flex flex-column justify-content-center ">
         <div class="mb-3 form-group d-flex gap-3">
             <div class="d-flex flex-column flex-grow-1">
-                <label for="exame" class="form-label">Exame</label>
-                <input #inputExame="ngModel" type="text" class="form-control" name="exame" [(ngModel)]="exame" required
-                    maxlength="64" minlength="8" placeholder="Informe o Exame">
-                <div *ngIf="inputExame.errors?.['required']&&inputExame.touched" class="alert alert-danger">
+                <label for="nomeExame" class="form-label">Exame</label>
+                <input #inputNomeExame="ngModel" type="text" class="form-control" name="nomeExame"
+                    [(ngModel)]="nomeExame" required maxlength="64" minlength="8" placeholder="Informe o nome do exame">
+                <div *ngIf="inputNomeExame.errors?.['required']&&inputNomeExame.touched" class="alert alert-danger">
                     Campo Obrigatório</div>
-                <div *ngIf="inputExame.errors?.['minlength']&&inputExame.touched" class="alert alert-danger">
+                <div *ngIf="inputNomeExame.errors?.['minlength']&&inputNomeExame.touched" class="alert alert-danger">
                     Mínimo de 8 caracteres</div>
             </div>
             <div class="d-flex flex-column flex-grow-2">
@@ -49,19 +49,19 @@
         <div class="mb-3 form-group d-flex gap-3">
             <div class="d-flex flex-column flex-grow-1">
                 <label for="url" class="form-label">URL de Exame</label>
-                <input #inputUrl="ngModel" type="text" class="form-control" name="url" [(ngModel)]="url" required
+                <input #inputUrl="ngModel" type="text" class="form-control" name="url" [(ngModel)]="url"
                     placeholder="www.example.com/example.pdf">
             </div>
         </div>
         <div class="mb-3 form-group d-flex gap-3">
-            <div class="flex-grow-1">
-                <label class="form-label" for="resultado">Resultados</label>
-                <textarea #inputResultado="ngModel" class="form-control" style="resize:none; height:10rem"
-                    placeholder="Resultados" name="resultado" [ngModel]="resultado" required maxlength="1024"
-                    minlength="16"></textarea>
-                <div *ngIf="inputResultado.errors?.['required']&&inputResultado.touched" class="alert alert-danger">
+            <div class="d-flex flex-column flex-grow-1">
+                <label for="resultados" class="form-label">Resultados</label>
+                <textarea #inputResultados="ngModel" type="text" class="form-control" name="resultados"
+                    style="resize:none; height:10rem" [(ngModel)]="resultados" placeholder="Resultados do exame"
+                    required minlength="16" maxlength="1024"></textarea>
+                <div *ngIf="inputResultados.errors?.['required']&&inputResultados.touched" class="alert alert-danger">
                     Campo Obrigatório</div>
-                <div *ngIf="inputResultado.errors?.['minlength']&&inputResultado.touched" class="alert alert-danger">
+                <div *ngIf="inputResultados.errors?.['minlength']&&inputResultados.touched" class="alert alert-danger">
                     Mínimo de 16 caracteres</div>
             </div>
         </div>
